Added animal selection dropdown

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
     <item name="color">@color/colorBackground</item>
   </style>
 
+  <style name="AnimalSpinner" parent="TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
+    <item name="android:textColor">?android:attr/colorAccent</item>
+  </style>
+
 </resources>
