--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,14 @@
   android:layout_height="match_parent"
   android:padding="@dimen/half_static_spacing"
   android:background="@color/colorBackground"
-  tools:context=".MainActivity">
+  tools:context=".controller.MainActivity">
 
-  <WebView
-    android:id="@+id/content_view"
+  <ImageView
+    android:id="@+id/image"
     android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
+    android:scaleType="fitCenter"
+    android:adjustViewBounds="true"
     android:layout_margin="@dimen/half_static_spacing"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
